- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.15.9, 5.15.10
- 
    None
- 
    Windows 7 x64 in VirtualBox
 Windows 11 x64 on real hardware (Dell Precision 7760)
 Visual Studio 2022 / MSVC 19.33.31629.0
- 
        
- 
        db4d4d1eda (qt/qtwebengine/dev) bd949de2d3 (qt/qtwebengine/6.3) 135722510f (qt/qtwebengine/6.4) bd949de2d3 (qt/tqtc-qtwebengine/6.3) 135722510f (qt/tqtc-qtwebengine/6.4)
In certain environments where only Software OpenGL is usable and ANGLE/Desktop OpenGL is not (e.g. Windows 7 in VirtualBox), or forcing it with the `QT_OPENGL` environment variable, WebEngine crashes during surface creation.
Repro:
1) Load the widget-based SimpleBrowser example in Creator
2) Configure the project for Qt 5.15.9
3) Add QT_OPENGL=software to the run environment
4) Run
Expected result: the default "www.qt.io" page loads, which is the case for 5.15.8.
Actual result: the page doesn't load, stays empty, the application log contains OpenGL errors:
12:20:15: Starting C:/git/Qt/Examples/Qt-5.15.10/webenginewidgets/build-simplebrowser-Desktop_Qt_5_15_9_MSVC2019_64bit-Release/release/simplebrowser.exe...
qt.qpa.backingstore: composeAndFlush: makeCurrent() failed
[23216:25412:0831/122015.828:ERROR:gl_context_wgl.cc(78)] Could not share GL contexts.
[23216:25412:0831/122015.835:ERROR:gpu_channel_manager.cc(753)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
[23216:25412:0831/122015.835:ERROR:shared_image_stub.cc(470)] SharedImageStub: unable to create context
[23216:25412:0831/122015.835:ERROR:gpu_channel.cc(449)] GpuChannel: Failed to create SharedImageStub
[23216:25412:0831/122015.843:ERROR:gl_context_wgl.cc(78)] Could not share GL contexts.
<these lines keep repeating forever>
The opengl32sw.dll is the one that ships with Qt 5.15.9 in the msvc2019_x64 package.
| For Gerrit Dashboard: QTBUG-106095 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 432524,2 | Make opengl module name check more relaxed | 5.15 | qt/qtwebengine | Status: NEW | 0 | 0 | 
| 429994,6 | Check QT_OPENGL for software | dev | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 430028,4 | Make opengl module name check more relaxed | dev | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 432521,1 | Make opengl module name check more relaxed | 6.4.0 | qt/qtwebengine | Status: ABANDONED | +2 | 0 | 
| 432522,2 | Make opengl module name check more relaxed | 6.4 | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 432523,2 | Make opengl module name check more relaxed | 6.3 | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 432967,2 | Check QT_OPENGL for software | 6.4.0 | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 432968,2 | Check QT_OPENGL for software | 6.4 | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 432969,2 | Check QT_OPENGL for software | 6.3 | qt/qtwebengine | Status: MERGED | +2 | 0 |