Check QT_OPENGL for software

According to qt docs this variable should have
same effect like setting Qt::AA_UseSoftwareOpenGL on
application, therefore read that in case of detecting
the software mode.

Pick-to: 6.4 6.4.0 6.3
Task-number: QTBUG-106095
Change-Id: I00fa8f0607ca44533c445434d1a35a1524bab679
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>